--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+Version 1.1.1
+bug fixes
+xml database update
+added regex function to scrape the current playing title:
+    <item>
+      <epg>
+        <epg_url>URL of the page to scrape</epg_url>
+        <epg_regex>regex pattern here, first match is appended to the items title</epg_regex>
+      </epg>
+
 Version 1.1.0
 fix play items with multiple links as playlist
 fix reading sources via nfs://
