--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Version 1.1.3
+update for XBMC Gotham compatibility
+
 Version 1.1.2
 bug fixes
 you can now add a <regex><agent> element to specify a User-agent for the regex page request
